2010-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (ramp-remote-process-environment): Use `format' instead
	of `concat'.
	(tramp-check-for-regexp): User (forward-line 1).
	(tramp-open-connection-setup-interactive-shell): Handle "=" in
	variable values properly.
	(tramp-find-inline-encoding): Raise an error, when no encoding is
	found.
	(tramp-wait-for-output): Remove spurious " ^H" sequences, sent by
	busybox.
	(tramp-get-ls-command): Suppress coloring, if possible.

2010-01-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-function-alist)
	(tramp-file-name-regexp, tramp-chunksize)
	(tramp-local-coding-commands, tramp-remote-coding-commands):
	Fix docstring.
	(tramp-do-copy-or-rename-file-directly): Do not use
	`tramp-handle-file-remote-p'.
	(tramp-find-foreign-file-name-handler)
	(tramp-advice-make-auto-save-file-name)
	(tramp-set-auto-save-file-modes): Remove superfluous check for
	`stringp'.  This is done inside `tramp-tramp-file-p'.

	* tramp-fish.el (tramp-fish-handle-directory-files-and-attributes):
	Do not use `tramp-fish-handle-file-attributes.

	* tramp-smb.el (tramp-smb-conf): New defcustom.
	(tramp-smb-maybe-open-connection): Use it.

2010-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-imap.el (top): Autoload needed packages.  (Bug#5448)

2010-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Add "Timeout, server not
	responding." string.

2010-01-18  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.el (tramp-remote-coding-commands): Fix typo in docstring.

2010-01-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights for 2010.
	(tramp-handle-insert-directory): Simplify handling of SWITCHES.
	(tramp-wait-for-output): Check, whether PROC buffer is available.

	* tramp-compat.el (tramp-advice-file-expand-wildcards): Wrap call
	of `featurep' for 2nd argument.
